--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id("com.google.dagger.hilt.android")
+    id 'com.google.dagger.hilt.android'
     id 'androidx.navigation.safeargs'
+    id 'kotlin-parcelize'
 }
 
 android {
