--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,13 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
     implementation("com.google.dagger:hilt-android:2.44")
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+
+    implementation("androidx.room:room-runtime:2.5.1")
+    implementation "androidx.room:room-ktx:2.5.1"
+    kapt("androidx.room:room-compiler:2.5.1")
+
 }
